include/ServerCore/C/Web.h

    typedef struct sc_web_event sc_web_event;
    typedef struct sc_http_response sc_http_response;
    typedef struct sc_websocket sc_websocket;
    typedef struct sc_websocket_event sc_websocket_event;
    typedef struct sc_web_options
    {
        uint32_t abi_version, struct_size;
        sc_bytes listen_address;
        uint16_t port, reserved;
        uint32_t io_threads, handler_threads;
        size_t max_connections, max_header_bytes, max_body_bytes, max_buffered_response_bytes;
        size_t max_active_requests, max_request_bytes;
        size_t max_event_count, max_event_bytes;
        size_t max_ws_event_count, max_ws_event_bytes;
        size_t max_send_bytes, max_chunk_bytes;
        uint32_t handler_timeout_ms, stream_idle_timeout_ms, send_stall_timeout_ms;
        uint32_t reserved2; 
        size_t max_ws_connection_event_count, max_ws_connection_event_bytes;
    } sc_web_options;
    enum
    {
        SC_WEB_REQUEST = 1,
        SC_WEB_WEBSOCKET = 2,
        SC_WEB_POLICY = 3
    };
    typedef struct sc_request_view
    {
        uint32_t abi_version, struct_size;
        sc_bytes method, target, body;
        const sc_header* headers;
        size_t header_count;
        const sc_header* parameters;
        size_t parameter_count;
    } sc_request_view;
    enum
    {
        SC_RESPONSE_CLOSE = 1u,
        SC_RESPONSE_HAS_LENGTH = 2u
    };
    typedef struct sc_response_head
    {
        uint32_t abi_version, struct_size;
        uint32_t status, flags;
        uint64_t content_length;
        const sc_header* headers;
        size_t header_count;
    } sc_response_head;
    SC_API sc_status sc_web_options_init(sc_web_options* options, size_t size) SC_NOEXCEPT;
    SC_API sc_status sc_response_head_init(sc_response_head* head, size_t size) SC_NOEXCEPT;
    SC_API sc_status sc_web_server_create(
        const sc_web_options* options, sc_web_server** out) SC_NOEXCEPT;
    SC_API sc_status sc_web_server_route(
        sc_web_server* server, sc_bytes method, sc_bytes path, uint32_t pattern) SC_NOEXCEPT;
    SC_API sc_status sc_web_server_websocket(
        sc_web_server* server, sc_bytes path, uint32_t pattern) SC_NOEXCEPT;
    SC_API sc_status sc_web_server_start(sc_web_server* server) SC_NOEXCEPT;
    SC_API uint16_t sc_web_server_port(const sc_web_server* server) SC_NOEXCEPT;
    SC_API sc_status sc_web_server_next(
        sc_web_server* server, uint32_t timeout_ms, sc_web_event** out) SC_NOEXCEPT;
    SC_API sc_status sc_web_server_stop(sc_web_server* server) SC_NOEXCEPT;
    SC_API void sc_web_server_destroy(sc_web_server* server) SC_NOEXCEPT;
    SC_API uint32_t sc_web_event_kind(const sc_web_event* event) SC_NOEXCEPT;
    SC_API sc_status sc_web_event_request(
        const sc_web_event* event, sc_request_view* view) SC_NOEXCEPT;
    SC_API sc_status sc_web_event_response(sc_web_event* event, sc_http_response** out) SC_NOEXCEPT;
    SC_API sc_status sc_web_event_socket(sc_web_event* event, sc_websocket** out) SC_NOEXCEPT;
    SC_API void sc_web_event_destroy(sc_web_event* event) SC_NOEXCEPT;
    SC_API sc_status sc_http_response_retain(
        const sc_http_response* response, sc_http_response** out) SC_NOEXCEPT;
    SC_API sc_status sc_http_response_start(
        sc_http_response* response, const sc_response_head* head) SC_NOEXCEPT;
    SC_API sc_status sc_http_response_write(sc_http_response* response, sc_bytes bytes) SC_NOEXCEPT;
    SC_API sc_status sc_http_response_finish(sc_http_response* response) SC_NOEXCEPT;
    SC_API sc_status sc_http_response_complete(
        sc_http_response* response, const sc_response_head* head, sc_bytes body) SC_NOEXCEPT;
    SC_API sc_status sc_http_response_wait_capacity(
        sc_http_response* response, size_t bytes, sc_wait** out) SC_NOEXCEPT;
    SC_API uint32_t sc_http_response_cancelled(const sc_http_response* response) SC_NOEXCEPT;
    SC_API uint32_t sc_http_response_is_head(const sc_http_response* response) SC_NOEXCEPT;
    SC_API size_t sc_http_response_max_write(const sc_http_response* response) SC_NOEXCEPT;
    SC_API void sc_http_response_abort(sc_http_response* response) SC_NOEXCEPT;
    SC_API void sc_http_response_destroy(sc_http_response* response) SC_NOEXCEPT;
    enum
    {
        SC_WS_TEXT = 1,
        SC_WS_BINARY = 2,
        SC_WS_CLOSED = 3
    };
    typedef struct sc_websocket_event_view
    {
        uint32_t abi_version, struct_size;
        uint32_t kind;
        uint16_t close_code, reserved;
        sc_bytes bytes;
    } sc_websocket_event_view;
    SC_API sc_status sc_websocket_retain(
        const sc_websocket* socket, sc_websocket** out) SC_NOEXCEPT;
    SC_API uint64_t sc_websocket_id(const sc_websocket* socket) SC_NOEXCEPT;
    SC_API sc_status sc_websocket_send(
        sc_websocket* socket, uint32_t kind, sc_bytes bytes) SC_NOEXCEPT;
    SC_API sc_status sc_websocket_close(
        sc_websocket* socket, uint16_t code, sc_bytes reason) SC_NOEXCEPT;
    SC_API sc_status sc_websocket_next(
        sc_websocket* socket, uint32_t timeout_ms, sc_websocket_event** out) SC_NOEXCEPT;
    SC_API sc_status sc_websocket_wait_capacity(
        sc_websocket* socket, size_t bytes, sc_wait** out) SC_NOEXCEPT;
    SC_API sc_status sc_websocket_event_get_view(
        const sc_websocket_event* event, sc_websocket_event_view* view) SC_NOEXCEPT;
    SC_API void sc_websocket_event_destroy(sc_websocket_event* event) SC_NOEXCEPT;
    SC_API void sc_websocket_destroy(sc_websocket* socket) SC_NOEXCEPT;