include/ServerCore/C/Net.h

    typedef struct sc_tcp_connection sc_tcp_connection;
    typedef struct sc_tcp_event sc_tcp_event;
    typedef struct sc_tcp_options
    {
        uint32_t abi_version, struct_size;
        sc_bytes listen_address;
        uint16_t port, reserved;
        uint32_t io_threads;
        size_t max_connections, max_event_count, max_event_bytes;
        size_t connection_send_bytes, total_send_bytes;
        size_t max_connection_event_count, max_connection_event_bytes;
    } sc_tcp_options;
    enum
    {
        SC_TCP_BYTES = 1,
        SC_TCP_CLOSED = 2
    };
    typedef struct sc_tcp_event_view
    {
        uint32_t abi_version, struct_size;
        uint32_t kind;
        sc_status status;
        sc_bytes bytes;
    } sc_tcp_event_view;
    SC_API sc_status sc_tcp_options_init(sc_tcp_options* options, size_t size) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_server_create(
        const sc_tcp_options* options, sc_tcp_server** out) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_server_start(sc_tcp_server* server) SC_NOEXCEPT;
    SC_API uint16_t sc_tcp_server_port(const sc_tcp_server* server) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_server_accept(
        sc_tcp_server* server, uint32_t timeout_ms, sc_tcp_connection** out) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_server_stop(sc_tcp_server* server) SC_NOEXCEPT;
    SC_API void sc_tcp_server_destroy(sc_tcp_server* server) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_connection_retain(
        const sc_tcp_connection* connection, sc_tcp_connection** out) SC_NOEXCEPT;
    SC_API uint64_t sc_tcp_connection_id(const sc_tcp_connection* connection) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_connection_send(
        sc_tcp_connection* connection, sc_bytes bytes) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_connection_next(
        sc_tcp_connection* connection, uint32_t timeout_ms, sc_tcp_event** out) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_connection_pause(sc_tcp_connection* connection) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_connection_resume(sc_tcp_connection* connection) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_connection_wait_capacity(
        sc_tcp_connection* connection, size_t bytes, sc_wait** out) SC_NOEXCEPT;
    SC_API void sc_tcp_connection_close(sc_tcp_connection* connection) SC_NOEXCEPT;
    SC_API sc_status sc_tcp_event_get_view(
        const sc_tcp_event* event, sc_tcp_event_view* view) SC_NOEXCEPT;
    SC_API void sc_tcp_event_destroy(sc_tcp_event* event) SC_NOEXCEPT;
    SC_API void sc_tcp_connection_destroy(sc_tcp_connection* connection) SC_NOEXCEPT;