include/ServerCore/C/Types.h


#define SC_ABI_VERSION 2u
    typedef int32_t sc_status;
    enum
    {
        SC_OK = 0,
        SC_INVALID_ARGUMENT = 1,
        SC_INVALID_FORMAT = 2,
        SC_TOO_LARGE = 3,
        SC_NOT_FOUND = 4,
        SC_ALREADY_EXISTS = 5,
        SC_CLOSED = 6,
        SC_WOULD_BLOCK = 7,
        SC_PLATFORM_ERROR = 8,
        SC_UNIMPLEMENTED = 9,
        SC_UNKNOWN_TYPE = 10,
        SC_TIMEOUT = 11,
        SC_CANCELLED = 12
    };
    typedef struct sc_bytes
    {
        const uint8_t* data;
        size_t len;
    } sc_bytes;
    typedef struct sc_header
    {
        sc_bytes name;
        sc_bytes value;
    } sc_header;
    enum
    {
        SC_CAP_WEB = 1u,
        SC_CAP_TCP = 2u,
        SC_CAP_WEB_EXTENSIONS = 8u,
        SC_CAP_OBSERVABILITY = 16u,
        SC_CAP_READINESS = 32u,
        SC_CAP_CHANNEL = 64u,
        SC_CAP_RUNTIME = 128u,
        SC_CAP_ENDPOINT = 256u,
        SC_CAP_REQUEST_LIMITER = 512u,
        SC_CAP_WEB_POLICIES = 1024u,
        SC_CAP_WEB_DATA = 2048u,
        SC_CAP_WS_EXTENSIONS = 4096u,
        SC_CAP_GAME_EXECUTION = 8192u,
        SC_CAP_BINARY_IO = 16384u,
        SC_CAP_DATAGRAM = 32768u,
        SC_CAP_ATOMIC_FILE = 65536u,
        SC_CAP_OPERATIONS = 131072u
    };
    SC_API uint32_t sc_abi_version(void) SC_NOEXCEPT;
    SC_API uint32_t sc_capabilities(void) SC_NOEXCEPT;
    SC_API const char* sc_status_name(sc_status status) SC_NOEXCEPT;
    typedef struct sc_tcp_server sc_tcp_server;
    typedef struct sc_web_server sc_web_server;
    typedef struct sc_wait sc_wait;
    SC_API sc_status sc_wait_result(const sc_wait* wait) SC_NOEXCEPT;
    SC_API sc_status sc_wait_wait(sc_wait* wait, uint32_t timeout_ms) SC_NOEXCEPT;
    SC_API void sc_wait_cancel(sc_wait* wait) SC_NOEXCEPT;
    SC_API void sc_wait_destroy(sc_wait* wait) SC_NOEXCEPT;